Fixed card logos not showing in older versions of PS

--- a/views/css/front.css
+++ b/views/css/front.css
@@ -22,8 +22,12 @@
  * SOFTWARE.
  */
 
+.onpay.card-logos {
+    margin-left: -2.875rem;
+    margin-bottom: 1.25rem;
+}
+
 .onpay.card-logo {
-    height: 36px;
-    margin-right: 8px;
-    margin-top: 3px;
+    height: 2rem;
+    margin-right: .5rem;
 }
